--- a/picard.info.yml
+++ b/picard.info.yml
@@ -1,5 +1,5 @@
 name: 'Picard'
 type: module
 description: 'Make it so...'
-core_version_requirement: ^8 || ^9 || ^10
+core_version_requirement: ^8 || ^9 || ^10 || ^11
 package: 'Novelty'
